fixed overflow issue

--- a/assets/components/discuss/themes/modx-dev/sass/_forums.sass
+++ b/assets/components/discuss/themes/modx-dev/sass/_forums.sass
@@ -400,7 +400,7 @@ div.m-section_title + div.row
 
     &:hover
         .dis-action-btn, .dis-pm-btn
-            @extend .quick-fade-in
+            @extend .quick-fade-in-all
             opacity: .99
             visibility: visible
     .dis-pm-btn
